# systemd-rust-ianaio

./: Cargo.toml  LICENSE  README.md
debian/: rust.service
debian/config/: Rocket.toml
debian/scripts/: postinst  postrm  prerm
src/: main.rs  main.rs.disabled
