[package]
name = "systemd-rust-ianaio"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
edition = "2021"
homepage = "https://github.com/ianaio/systemd-rust-ianaio#readme"
keywords = ["ianaio","systems", "systemd", "rust", "debian"]
categories = ["command-line-utilities", "rust-systemd", "production-tools::cargo-plugins"]
repository = "https://github.com/ianaio/systemd-rust-ianaio"
readme = "README.md"
description = "Rust in systemd"
license-file = "LICENSE.txt"
documentation = "https://docs.iana.io/systemd"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "System for systemd rust from debian"
section = "admin"
priority = "optional"
assets = [
    ["target/release/systemd-rust-ianaio", "usr/bin/rust", "755"],
    ["debian/rust.service", "/lib/systemd/system/rust.service", "644"],
]
maintainer-scripts = "debian/scripts"

[dependencies]
rocket = "0.4.10"
flate2 = "1.0.28"
zopfli = { version = "0.8.0", default-features = false, features = ["std", "gzip"] }
getopts = "0.2.21"
md5 = "0.7.0"
quick-error = "2.0.1"
xz2 = { version = "0.1.7", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
toml = "0.8.8"
glob = "0.3.1"
ar = "0.9.0"
cargo_toml = "0.17.1"
rayon = "1.8.0"
regex = { version = "1.10.2", default-features = false, features = ["std"] }
itertools = "0.12.0"
tempfile = "3.8.1"
env_logger = "0.10.1"
log = "0.4.20"
crossbeam-channel = "0.5.8"

